# hackaton2019

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
include/: stl.h  triangulation.h  tris.h  visible_lanes.h
src/: main.cpp  stl.cpp  triangulation.cpp  tris.cpp  tris.h  visible_lanes.cpp  visible_lanes.h
